@@ -239,11 +239,14 @@ BEEP_REJECT[string]=-f 400 -l 100 -n -f 350 -l 70
 BALLOON_CMD[string]=
 
 
-#############
-# Debugging #
-#############
+#######################
+# Logging & debugging #
+#######################
+
+# Syslog facility to use (leave empty to disable), see syslog manpage
+# for more information on possible facilities.
+SYSLOG=LOG_LOCAL0
 
 # Set DEBUG to 1 to enable verbose output.
 # Of course never to be used on live systems!
-
 DEBUG=0
